Favicon addition - page consolidation
I added a favicon to the page as well as added some of the text provided
by the page owners.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Twelve Stones Community Garden</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" />
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/favicon/site.webmanifest">
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -29,25 +34,23 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="volunteer.html">Volunteer</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="donate.html">Donate</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="#intro">Home</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="#about-section">About</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="#support">Support Us</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <section class="page-section clearfix">
+        <section class="page-section clearfix" id="intro">
             <div class="container">
                 <div class="intro">
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Strong Roots</span>
-                            <span class="section-heading-lower"> </span>
+                            <span class="section-heading-upper">Since 2008</span>
                         </h2>
-                        <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit us!</a></div>
+                        <p class="mb-3">we have served the communities of Eufaula and Clayton, Alabama by providing fresh produce to all who care to help with the harvest.</p>
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#support  ">Support the gardens!</a></div>
                     </div>
                 </div>
             </div>
@@ -58,10 +61,84 @@
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">Our Promise</span>
-                                <span class="section-heading-lower">To You</span>
+                                <span class="section-heading-upper">No Rules</span>
+                                <span class="section-heading-lower">Just Love</span>
                             </h2>
-                            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+                            <p class="mb-0">Thanks to our donors and volunteers, we’re able to grow and share corn, collards, peas, peppers, turnips and more. Every year we host a “Hoe-Down In The Garden” - everyone’s invited to share in the harvest.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page-section about-heading" id="about-section">
+            <div class="container">
+                <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/about.jpg" alt="..." />
+                <div class="about-heading-content">
+                    <div class="row">
+                        <div class="col-xl-9 col-lg-10 mx-auto">
+                            <div class="bg-faded rounded p-5">
+                                <h2 class="section-heading mb-4">
+                                    <span class="section-heading-upper">TWO GARDENS, ONE PURPOSE</span>
+                                    <span class="section-heading-lower">FREE, FRESH FOOD FOR EVERYONE</span>
+                                </h2>
+                                <p>Twelve Stones operates two community gardens in Barbour County, Alabama. We’re an certified nonprofit organization - your donations are tax deductible and much appreciated!</p>x`x`
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page-section cta" id="support">
+            <div class="container">
+                <div class="row">   
+                    <div class="col-xl-9 mx-auto">
+                        <div class="cta-inner bg-faded text-center rounded">
+                            <h2 class="section-heading mb-5">
+                                <span class="section-heading-upper">Come On In</span>
+                                <span class="section-heading-lower">We're Open</span>
+                            </h2>
+                            <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Sunday
+                                    <span class="ms-auto">Closed</span>
+                                </li>
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Monday
+                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                </li>
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Tuesday
+                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                </li>
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Wednesday
+                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                </li>
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Thursday
+                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                </li>
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Friday
+                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
+                                </li>
+                                <li class="list-unstyled-item list-hours-item d-flex">
+                                    Saturday
+                                    <span class="ms-auto">9:00 AM to 5:00 PM</span>
+                                </li>
+                            </ul>
+                            <p class="address mb-5">
+                                <em>
+                                    <strong>1116 Orchard Street</strong>
+                                    <br />
+                                    Golden Valley, Minnesota
+                                </em>
+                            </p>
+                            <p class="mb-0">
+                                <small><em>Call Anytime</em></small>
+                                <br />
+                                (317) 585-8468
+                            </p>
                         </div>
                     </div>
                 </div>
