--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                     <span class="section-heading-upper">TWO GARDENS, ONE PURPOSE</span>
                                     <span class="section-heading-lower">FREE, FRESH FOOD FOR EVERYONE</span>
                                 </h2>
-                                <p>Twelve Stones operates two community gardens in Barbour County, Alabama. We’re an certified nonprofit organization - your donations are tax deductible and much appreciated!</p>x`x`
+                                <p>Twelve Stones operates two community gardens in Barbour County, Alabama. We’re an certified nonprofit organization - your donations are tax deductible and much appreciated!</p>
                             </div>
                         </div>
                     </div>
