--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
+        <!-- facebook plug-in script link -->
+        <div id="fb-root"></div>
+        <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v11.0" nonce="rhf5OuAk"></script>
+        <!-- Header -->
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
                 <span class="site-heading-lower text-primary mb-3">Twelve Stone</span>
@@ -30,7 +34,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
             <div class="container">
-                <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Twelve Stone</a>
+                <a class="navbar-brand text-secondary fw-bold d-lg-none" href="index.html">TWELVE STONE</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
@@ -41,6 +45,7 @@
                 </div>
             </div>
         </nav>
+        <!-- Our Home page -->
         <section class="page-section clearfix" id="intro">
             <div class="container">
                 <div class="intro">
@@ -51,7 +56,7 @@
                         </h2>
                         <p class="mb-3">we have served the communities of Eufaula and Clayton, Alabama by providing fresh produce to all who care to help with the harvest.</p>
                         <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#support  ">Support the gardens!</a></div>
-                    </div>
+                    </div>  
                 </div>
             </div>
         </section>
@@ -65,6 +70,21 @@
                                 <span class="section-heading-lower">Just Love</span>
                             </h2>
                             <p class="mb-0">Thanks to our donors and volunteers, we’re able to grow and share corn, collards, peas, peppers, turnips and more. Every year we host a “Hoe-Down In The Garden” - everyone’s invited to share in the harvest.</p>
+                        </div>
+                    </div> 
+                </div>
+            </div>
+        </section>
+        <section id="page-section cta">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-9 mx-auto">
+                        <div class="cta-inner bg-faded text-center rounded">
+                            <h2 class="section-heading mb-4" id="fb-header">
+                                <span class="section-heading-upper mb-3">We're on Facebook</span>
+                                <span class="section-heading-lower mb-3">Keep up with us!</span>
+                            </h2>
+                            <div class="fb-page" data-href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/">Twelve Stones CDC Community Gardens-Eufaula &amp; Clayton - CDC</a></blockquote></div>
                         </div>
                     </div>
                 </div>
@@ -129,14 +149,12 @@
                             </ul>
                             <p class="address mb-5">
                                 <em>
-                                    <strong>1116 Orchard Street</strong>
-                                    <br />
-                                    Golden Valley, Minnesota
+                                    <p><span class="heavy-font">Eufaula</span> Off Dale Road take St.Johns Street to Stevens Street...you're there!<br><span class="heavy-font">Clayton</span> Please reach out to us for directions</p>
                                 </em>
                             </p>
                             <p class="mb-0">
                                 <small><em>Call Anytime</em></small>
-                                <br />
+                                <br/>
                                 (317) 585-8468
                             </p>
                         </div>
