Support page update
Finally added most of the support page, just going to wait for some
feedback now!

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </nav>
-        <!-- Our Home page -->
+        <!-- Home page -->
         <section class="page-section clearfix" id="intro">
             <div class="container">
                 <div class="intro">
@@ -55,8 +55,8 @@
                             <span class="section-heading-upper">Since 2008</span>
                         </h2>
                         <p class="mb-3">we have served the communities of Eufaula and Clayton, Alabama by providing fresh produce to all who care to help with the harvest.</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#support  ">Support the gardens!</a></div>
-                    </div>  
+                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#support">Support the gardens!</a></div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -71,10 +71,11 @@
                             </h2>
                             <p class="mb-0">Thanks to our donors and volunteers, we’re able to grow and share corn, collards, peas, peppers, turnips and more. Every year we host a “Hoe-Down In The Garden” - everyone’s invited to share in the harvest.</p>
                         </div>
-                    </div> 
+                    </div>
                 </div>
             </div>
         </section>
+        <!-- facebook block-->
         <section id="page-section cta">
             <div class="container">
                 <div class="row">
@@ -90,6 +91,7 @@
                 </div>
             </div>
         </section>
+        <!-- About Section -->
         <section class="page-section about-heading" id="about-section">
             <div class="container">
                 <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="assets/img/about.jpg" alt="..." />
@@ -108,54 +110,24 @@
                 </div>
             </div>
         </section>
+        <!-- Support Section -->
         <section class="page-section cta" id="support">
             <div class="container">
-                <div class="row">   
+                <div class="row">
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-5">
-                                <span class="section-heading-upper">Come On In</span>
-                                <span class="section-heading-lower">We're Open</span>
+                                <span class="section-heading-upper">LEND A HAND</span>
+                                <span class="section-heading-lower">DONATE OR VOLUNTEER</span>
                             </h2>
-                            <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Sunday
-                                    <span class="ms-auto">Closed</span>
-                                </li>
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Monday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
-                                </li>
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Tuesday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
-                                </li>
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Wednesday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
-                                </li>
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Thursday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
-                                </li>
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Friday
-                                    <span class="ms-auto">7:00 AM to 8:00 PM</span>
-                                </li>
-                                <li class="list-unstyled-item list-hours-item d-flex">
-                                    Saturday
-                                    <span class="ms-auto">9:00 AM to 5:00 PM</span>
-                                </li>
-                            </ul>
-                            <p class="address mb-5">
+                            <p>
+                                As a certified non profit organization, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. They also help compensate the local farmers who help plow our fields once a year prior to planting.
+                                <br> <strong>To make a donation, please send a check payable to:<br> </strong><span class="heavy-font"><em>TWELVE STONES COMMUNITY DEVELOPMENT CORPORATION</em></span>
+                                <br>Our address is:<br><strong>P.O. BOX 921<br>Clayton, AL 36016</strong><br>
+                                <br><strong>If you’d like to volunteer, please send an email to jbrittnew@hotmail.com or reach out on Facebook.</strong>
                                 <em>
                                     <p><span class="heavy-font">Eufaula</span> Off Dale Road take St.Johns Street to Stevens Street...you're there!<br><span class="heavy-font">Clayton</span> Please reach out to us for directions</p>
                                 </em>
-                            </p>
-                            <p class="mb-0">
-                                <small><em>Call Anytime</em></small>
-                                <br/>
-                                (317) 585-8468
                             </p>
                         </div>
                     </div>
