Visual Updates and corrections
I updated the page with text corrections all over the page and fixed the
fb block to be responsive on anything older than an Iphone 5. I hope to
make it more reponsive.

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <!-- Header -->
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-lower text-primary mb-3">Twelve Stone</span>
+                <span class="site-heading-lower text-primary mb-3">Twelve Stones CDC</span>
                 <span class="site-heading-upper text-secondary">Community Gardens</span>
             </h1>
         </header>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
             <div class="container">
-                <a class="navbar-brand text-secondary fw-bold d-lg-none" href="index.html">TWELVE STONE</a>
+                <a class="navbar-brand text-secondary fw-bold d-lg-none" href="index.html">TWELVE STONES</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
@@ -52,9 +52,9 @@
                     <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
                     <div class="intro-text left-0 text-center bg-faded p-5 rounded">
                         <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Since 2008</span>
+                            <span class="section-heading-upper">FOR OVER A DECADE</span>
                         </h2>
-                        <p class="mb-3">we have served the communities of Eufaula and Clayton, Alabama by providing fresh produce to all who care to help with the harvest.</p>
+                        <p class="mb-3">We have served the communities of Eufaula and Clayton, Alabama by providing free fresh food.</p>
                         <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#support">Support the gardens!</a></div>
                     </div>
                 </div>
@@ -85,7 +85,9 @@
                                 <span class="section-heading-upper mb-3">We're on Facebook</span>
                                 <span class="section-heading-lower mb-3">Keep up with us!</span>
                             </h2>
-                            <div class="fb-page" data-href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/">Twelve Stones CDC Community Gardens-Eufaula &amp; Clayton - CDC</a></blockquote></div>
+                            <div id="fb-container">
+                                <div id="fb-block" class="fb-page" data-href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" data-tabs="timeline" data-width="350" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/">Twelve Stones CDC Community Gardens-Eufaula &amp; Clayton - CDC</a></blockquote></div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -103,7 +105,10 @@
                                     <span class="section-heading-upper">TWO GARDENS, ONE PURPOSE</span>
                                     <span class="section-heading-lower">FREE, FRESH FOOD FOR EVERYONE</span>
                                 </h2>
-                                <p>Twelve Stones operates two community gardens in Barbour County, Alabama. We’re an certified nonprofit organization - your donations are tax deductible and much appreciated!</p>
+                                <p>Twelve Stones CDC operates two community gardens in Barbour County, Alabama (Eufaula and Clayton).
+                                <br>We also partner with relatedagencies to promote healthy eating habits and positive lifestyle choices.
+                                <br>We're a 501(c)(3) nonprofit organization - your donations are tax deductible and much appreciated!
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -121,21 +126,24 @@
                                 <span class="section-heading-lower">DONATE OR VOLUNTEER</span>
                             </h2>
                             <p>
-                                As a certified non profit organization, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. They also help compensate the local farmers who help plow our fields once a year prior to planting.
-                                <br> <strong>To make a donation, please send a check payable to:<br> </strong><span class="heavy-font"><em>TWELVE STONES COMMUNITY DEVELOPMENT CORPORATION</em></span>
-                                <br>Our address is:<br><strong>P.O. BOX 921<br>Clayton, AL 36016</strong><br>
-                                <br><strong>If you’d like to volunteer, please send an email to jbrittnew@hotmail.com or reach out on Facebook.</strong>
-                                <em>
-                                    <p><span class="heavy-font">Eufaula</span> Off Dale Road take St.Johns Street to Stevens Street...you're there!<br><span class="heavy-font">Clayton</span> Please reach out to us for directions</p>
-                                </em>
+                                As a 501(c)(3) nonprofit organization, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. The also help compensate local vendors who plow our fields and provide heavy maintenance. <br> Your volunteer time helps us to nurture and maintain the gardens until harvest time. Groups and Organizations can also 'Adopt a crop'!
+                                <br><br><strong>To make a tax-deductable donation, please send a check payable to:<br> </strong><span class="heavy-font"><em>TWELVE STONES CDC </em></span>
+                                <br>Our address is:<br><strong>P.O. BOX 921<br>Eufaula, AL 36072</strong><br>
+
                             </p>
+                            <!-- Paypal button would go here-->
+                            <p>
+                                <br><strong>If you’d like to volunteer, please send an email to jbrittnew@hotmail.com or reach out on Facebook.</strong>
+                                <br><br><em><span class="heavy-font">Eufaula</span> Off Dale Road take St.Johns Street to Stevens Street...you're there!<br><span class="heavy-font">Clayton</span> On Browder Street - look for our sign</em>
+                            </p>
+
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <footer class="footer text-faded text-center py-5">
-            <div class="container"><p class="m-0 small">Copyright &copy; Twelve Stone - Community Gardens</p></div>
+            <div class="container"><p class="m-0 small">Copyright &copy; Twelve Stones CDC</p></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
