--- a/index.html
+++ b/index.html
@@ -81,18 +81,13 @@
                 <div class="row">
                     <div class="col-xl-9 mx-auto">
                         <div class="cta-inner bg-faded text-center rounded">
+                            <div class="spacer"></div>
                             <h2 class="section-heading mb-4" id="fb-header">
                                 <span class="section-heading-upper mb-3">We're on Facebook</span>
                                 <span class="section-heading-lower mb-3">Keep up with us!</span>
-<<<<<<< HEAD
                             </h2>   
                             <div class="fb-page" data-href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" data-tabs="timeline" data-width="500" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/">Twelve Stones CDC Community Gardens-Eufaula &amp; Clayton - CDC</a></blockquote></div>
-=======
-                            </h2>
-                            <div id="fb-container">
-                                <div id="fb-block" class="fb-page" data-href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" data-tabs="timeline" data-width="350" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Twelve-Stones-CDC-Community-Gardens-Eufaula-Clayton-CDC-561020934054606/">Twelve Stones CDC Community Gardens-Eufaula &amp; Clayton - CDC</a></blockquote></div>
-                            </div>
->>>>>>> beaf4d06a271aeda7d81c80201ab8758808dfefd
+                            <div class="spacer"></div>
                         </div>
                     </div>
                 </div>
