--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         <div class="cta-inner bg-faded text-center rounded">
                             <h2 class="section-heading mb-5">
                                 <span class="section-heading-upper">LEND A HAND</span>
-                                <span class="section-heading-lower">DONATE OR VOLUNTEER</span>
+                                <span class="section-heading-lower">DONATE</span>
                             </h2>
                             <p>
                                 As a 501(c)(3) nonprofit organization, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. The also help compensate local vendors who plow our fields and provide heavy maintenance. <br> Your volunteer time helps us to nurture and maintain the gardens until harvest time. Groups and Organizations can also 'Adopt a crop'!
