Paypal button added
Paypal button was finally added, I still hope to make some updates in
the near future with the facebook block widths.

--- a/index.html
+++ b/index.html
@@ -126,12 +126,20 @@
                                 <span class="section-heading-lower">DONATE OR VOLUNTEER</span>
                             </h2>
                             <p>
-                                As a 501(c)(3) nonprofit organization, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. The also help compensate local vendors who plow our fields and provide heavy maintenance. <br> Your volunteer time helps us to nurture and maintain the gardens until harvest time. Groups and Organizations can also 'Adopt a crop'!
-                                <br><br><strong>To make a tax-deductable donation, please send a check payable to:<br> </strong><span class="heavy-font"><em>TWELVE STONES CDC </em></span>
-                                <br>Our address is:<br><strong>P.O. BOX 921<br>Eufaula, AL 36072</strong><br>
-
+                                As a <strong>501(c)(3) nonprofit organization</strong>, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. The also help compensate local vendors who plow our fields and provide heavy maintenance. <br> Your volunteer time helps us to nurture and maintain the gardens until harvest time. Groups and Organizations can also 'Adopt a crop'!
+                                <br><br><strong>To make a tax-deductable donation, click here:</strong>
                             </p>
-                            <!-- Paypal button would go here-->
+                            <!-- Donate button -->
+                            <form action="https://www.paypal.com/donate" method="post" target="_top">
+                                <input type="hidden" name="hosted_button_id" value="TKD6UMCFUUSN2" />
+                                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                             </form>
+                             <!--                -->
+                                <p><strong>OR</strong><br>
+                                    please send a check payable to:<br> </strong><span class="heavy-font"><em>TWELVE STONES CDC </em></span>
+                                    <br>Our address is:<br><strong>P.O. BOX 921<br>Eufaula, AL 36072</strong><br>
+                                </p>
                             <p>
                                 <br><strong>If you’d like to volunteer, please send an email to jbrittnew@hotmail.com or reach out on Facebook.</strong>
                                 <br><br><em><span class="heavy-font">Eufaula</span> Off Dale Road take St.Johns Street to Stevens Street...you're there!<br><span class="heavy-font">Clayton</span> On Browder Street - look for our sign</em>
