--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                     <span class="section-heading-lower">FREE, FRESH FOOD FOR EVERYONE</span>
                                 </h2>
                                 <p>Twelve Stones CDC operates two community gardens in Barbour County, Alabama (Eufaula and Clayton).
-                                <br>We also partner with relatedagencies to promote healthy eating habits and positive lifestyle choices.
+                                <br>We also partner with related agencies to promote healthy eating habits and positive lifestyle choices.
                                 <br>We're a 501(c)(3) nonprofit organization - your donations are tax deductible and much appreciated!
                                 </p>
                             </div>
@@ -126,7 +126,7 @@
                                 <span class="section-heading-lower">DONATE</span>
                             </h2>
                             <p>
-                                As a <strong>501(c)(3) nonprofit organization</strong>, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. The also help compensate local vendors who plow our fields and provide heavy maintenance. <br> Your volunteer time helps us to nurture and maintain the gardens until harvest time. Groups and Organizations can also 'Adopt a crop'!
+                                As a <strong>501(c)(3) nonprofit organization</strong>, your donation is 100% tax deductible. Donations help us buy seeds, fertilizer, and supplies. They also help compensate local vendors who plow our fields and provide heavy maintenance. <br> Your volunteer time helps us to nurture and maintain the gardens until harvest time. Groups and Organizations can also 'Adopt a crop'!
                                 <br><br><strong>To make a tax-deductable donation, click here:</strong>
                             </p>
                             <!-- Donate button -->
